--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="card-content">
                             <h3>Shrine Vault Puzzle</h3>
                             <p>Uncover the ancient symbols and unlock the shrine's secrets. Solutions for all difficulty levels including Story, Hard, and Lost in the Fog.</p>
-                            <span class="card-link">View Solution →</span>
+                            <a class="card-link" href="./guide/shrine-puzzle.html">View Solution →</a>
                         </div>
                     </div>
 
@@ -70,7 +70,7 @@
                         <div class="card-content">
                             <h3>Scarecrow Field Puzzle</h3>
                             <p>Navigate the haunting scarecrow field by identifying the correct guardian. Complete walkthrough for every difficulty setting.</p>
-                            <span class="card-link">View Solution →</span>
+                            <a class="card-link" href="./guide/altar-puzzle.html">View Solution →</a>
                         </div>
                     </div>
 
@@ -81,11 +81,11 @@
                         <div class="card-content">
                             <h3>School Locker Codes</h3>
                             <p>Access all student lockers with the correct combinations. Find codes for Asakura Ayumi, Aoi Takeshi, Tsuchiya Taiko, and Suga Yosie.</p>
-                            <span class="card-link">View Solution →</span>
+                            <a class="card-link" href="./guide/altar-puzzle.html">View Solution →</a>
                         </div>
                     </div>
 
-                    <div class="puzzle-card" onclick="location.href='guide/sacred-sword.html'">
+                    <a class="puzzle-card" href="./guide/sacred-sword.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Sacred-Sword.jpg" alt="Silent Hill f Sacred Sword" loading="lazy">
                         </div>
@@ -94,9 +94,9 @@
                             <p>Collect five Jizo offerings in New Game Plus, claim the blade at the Thousand-Year Cedar, then solve the Crimson Water bell puzzle to purify it. Includes precise offering spots, shrine locations, and purification route that affects multiple endings.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="location.href='guide/all-endings-explained.html'">
+                    <a class="puzzle-card" href="./guide/all-endings-explained.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-All-Endings-Explained.jpg" alt="Silent Hill f All Endings Explained" loading="lazy">
                         </div>
@@ -105,9 +105,9 @@
                             <p>See every ending in Silent Hill f and how to unlock it. First-run lock, NG+ routes, Red Capsules rules, and how the Sacred Sword (purified or not) changes outcomes.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="location.href='guide/shimizu-residence.html'">
+                    <a class="puzzle-card" href="./guide/shimizu-residence.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Shimizu-Residence.jpg" alt="Silent Hill f Shimizu Residence" loading="lazy">
                         </div>
@@ -116,9 +116,9 @@
                             <p>Step-by-step route through Hinako's house: access I/II/III, Fletching Key, all three crests, Ominous Photo & My Room puzzles, and the Parents boss door.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="location.href='guide/trophy-roadmap.html'">
+                    <a class="puzzle-card" href="./guide/trophy-roadmap.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Trophy-Guide.jpg" alt="Silent Hill f Trophy Guide" loading="lazy">
                         </div>
@@ -127,9 +127,9 @@
                             <p>All 57 trophies with a clean Platinum route: 3-playthrough plan covering endings, difficulty, and 100% collectibles—no online trophies.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="location.href='guide/altar-puzzle.html'">
+                    <a class="puzzle-card" href="./guide/altar-puzzle.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Altar-Puzzle.jpg" alt="Silent Hill f Altar Puzzle" loading="lazy">
                         </div>
@@ -138,9 +138,9 @@
                             <p>Exact placements for Story/Hard/Lost in the Fog. Match pedestal symbols to offerings; includes a simple left-to-right solution and Fog grid positions.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="location.href='guide/shrine-puzzle.html'">
+                    <a class="puzzle-card" href="./guide/shrine-puzzle.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Shrine-Puzzle.jpg" alt="Silent Hill f Shrine Puzzle (Ema)" loading="lazy">
                         </div>
@@ -149,9 +149,9 @@
                             <p>Find the three correct ema across the shrine boards and input the symbols. Includes Story/Hard exact images and Lost in the Fog decoding trick.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="location.href='guide/parents-boss.html'">
+                    <a class="puzzle-card" href="./guide/parents-boss.html">
                         <div class="card-image">
                             <img src="images/silent-hill-f-parents-guide.jpg" alt="Silent Hill f Parents Boss Guide" loading="lazy">
                         </div>
@@ -160,7 +160,7 @@
                             <p>Shimizu Residence duo fight. Kill the father first to end the battle early and secure the related trophy. Movesets, safe punishes, and prep checklist.</p>
                             <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
