--- a/guide/altar-puzzle.html
+++ b/guide/altar-puzzle.html
@@ -34,7 +34,7 @@
         <div class="container">
             <article class="guide-content">
                 <div class="guide-header">
-                    <img src="https://via.placeholder.com/1200x630?text=Altar+Puzzle+Guide" alt="Silent Hill f Altar Puzzle Guide" class="guide-hero-image">
+                    <img src="../images/Silent-hill-f-altar-puzzle.jpg" alt="Silent Hill f Altar Puzzle Guide" class="guide-hero-image">
                 </div>
 
                 <h1>Silent Hill f – Altar Puzzle (Shrine Path)</h1>
