--- a/guide/sacred-sword.html
+++ b/guide/sacred-sword.html
@@ -34,7 +34,7 @@
         <div class="container">
             <article class="guide-content">
                 <div class="guide-header">
-                    <img src="https://via.placeholder.com/1200x630?text=Sacred+Sword+Guide" alt="Sacred Sword guide header" class="guide-hero-image">
+                    <img src="../images/sacred-sword-guide-header.jpg" alt="Sacred Sword guide header" class="guide-hero-image">
                 </div>
 
                 <h1>Silent Hill f Sacred Sword – How to Get & Purify (NG+)</h1>
