--- a/guide/shimizu-residence.html
+++ b/guide/shimizu-residence.html
@@ -34,7 +34,7 @@
         <div class="container">
             <article class="guide-content">
                 <div class="guide-header">
-                    <img src="https://via.placeholder.com/1200x630?text=Shimizu+Residence+Guide" alt="Shimizu Residence guide header" class="guide-hero-image">
+                    <img src="../images/Silent-hill-f-shimizu-residence.jpg" alt="Shimizu Residence guide header" class="guide-hero-image">
                 </div>
 
                 <h1>Shimizu Residence – Full Walkthrough</h1>
