--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
                 <h2>Walkthrough & Wiki</h2>
                 <p class="section-description">The ultimate Silent Hill F walkthrough by expert horror game players. Detailed puzzle solutions, weapon locations, secret endings, and hidden secrets.</p>
                 <div class="puzzle-grid">
-                    <div class="puzzle-card" onclick="showPuzzle('shrine')">
+                    <a class="puzzle-card" href="./guide/shrine-vault-puzzle.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Shrine-Vault-Puzzle.jpg" alt="Silent Hill f Shrine Vault Puzzle" loading="lazy">
                         </div>
                         <div class="card-content">
                             <h3>Shrine Vault Puzzle</h3>
                             <p>Uncover the ancient symbols and unlock the shrine's secrets. Solutions for all difficulty levels including Story, Hard, and Lost in the Fog.</p>
-                            <a class="card-link" href="./guide/shrine-puzzle.html">View Solution →</a>
+                            <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="showPuzzle('scarecrow')">
+                    <a class="puzzle-card" href="./guide/Scarecrow-Field-Puzzle.html">
                         <div class="card-image">
                             <img src="images/Silent-Hill-f-Scarecrow-Field-Puzzle.jpg" alt="Silent Hill f Scarecrow Field Puzzle" loading="lazy">
                         </div>
                         <div class="card-content">
                             <h3>Scarecrow Field Puzzle</h3>
                             <p>Navigate the haunting scarecrow field by identifying the correct guardian. Complete walkthrough for every difficulty setting.</p>
-                            <a class="card-link" href="./guide/altar-puzzle.html">View Solution →</a>
+                            <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="puzzle-card" onclick="showPuzzle('locker')">
+                    <a class="puzzle-card" href="./guide/School-Locker-Codes.html">
                         <div class="card-image">
                             <img src="images/Silent-Hil-f-School-Locker-Codes.jpg" alt="Silent Hill f School Locker Codes" loading="lazy">
                         </div>
                         <div class="card-content">
                             <h3>School Locker Codes</h3>
                             <p>Access all student lockers with the correct combinations. Find codes for Asakura Ayumi, Aoi Takeshi, Tsuchiya Taiko, and Suga Yosie.</p>
-                            <a class="card-link" href="./guide/altar-puzzle.html">View Solution →</a>
+                            <span class="card-link">View Solution →</span>
                         </div>
-                    </div>
+                    </a>
 
                     <a class="puzzle-card" href="./guide/sacred-sword.html">
                         <div class="card-image">
