--- a/guide/all-endings-explained.html
+++ b/guide/all-endings-explained.html
@@ -34,7 +34,7 @@
         <div class="container">
             <article class="guide-content">
                 <div class="guide-header">
-                    <img src="https://via.placeholder.com/1200x630?text=All+Endings+Explained" alt="Silent Hill f All Endings Overview" class="guide-hero-image">
+                    <img src="../images/Silent-hill-f-all-endings-explained.jpg" alt="Silent Hill f All Endings Overview" class="guide-hero-image">
                 </div>
 
                 <h1>Silent Hill f – All Endings Explained</h1>
