--- a/guide/School-Locker-Codes.html
+++ b/guide/School-Locker-Codes.html
@@ -155,5 +155,16 @@
       </div>
     </div>
   </footer>
+  
+  <script type="text/javascript">
+    atOptions = {
+        'key' : 'f183500e22bcaa2a212a558096167355',
+        'format' : 'iframe',
+        'height' : 250,
+        'width' : 300,
+        'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/f183500e22bcaa2a212a558096167355/invoke.js"></script>
 </body>
 </html>
